// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component should render correctly 1`] = `
<div>
  <h1
    class="primary medium left title normal"
  >
    I am a title text
  </h1>
</div>
`;

exports[`Title component should render correctly with bold type 1`] = `
<div>
  <h1
    class="primary medium left title bold"
  >
    I am a title text large
  </h1>
</div>
`;

exports[`Title component should render correctly with large size 1`] = `
<div>
  <h1
    class="primary large left title normal"
  >
    I am a title text large
  </h1>
</div>
`;

exports[`Title component should render correctly with large size and center text aligin 1`] = `
<div>
  <h1
    class="primary large center title normal"
  >
    I am a title text large and center
  </h1>
</div>
`;

exports[`Title component should render correctly with small size 1`] = `
<div>
  <h1
    class="primary small left title normal"
  >
    I am a title text small
  </h1>
</div>
`;

exports[`Title component should render correctly with small size and right text aligin 1`] = `
<div>
  <h1
    class="primary small right title normal"
  >
    I am a title text small right align
  </h1>
</div>
`;
